--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -788,90 +788,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>#sk-container-id-3 {color: black;background-color: white;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>XGBRegressor(base_score=None, booster=None, callbacks=None,\n",
-       "             colsample_bylevel=None, colsample_bynode=None,\n",
-       "             colsample_bytree=None, early_stopping_rounds=None,\n",
-       "             enable_categorical=False, eval_metric=None, feature_types=None,\n",
-       "             gamma=None, gpu_id=None, grow_policy=None, importance_type=None,\n",
-       "             interaction_constraints=None, learning_rate=0.1, max_bin=None,\n",
-       "             max_cat_threshold=None, max_cat_to_onehot=None,\n",
-       "             max_delta_step=None, max_depth=10, max_leaves=None,\n",
-       "             min_child_weight=None, missing=nan, monotone_constraints=None,\n",
-       "             n_estimators=100, n_jobs=None, num_parallel_tree=None,\n",
-       "             predictor=None, random_state=0, ...)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">XGBRegressor</label><div class=\"sk-toggleable__content\"><pre>XGBRegressor(base_score=None, booster=None, callbacks=None,\n",
-       "             colsample_bylevel=None, colsample_bynode=None,\n",
-       "             colsample_bytree=None, early_stopping_rounds=None,\n",
-       "             enable_categorical=False, eval_metric=None, feature_types=None,\n",
-       "             gamma=None, gpu_id=None, grow_policy=None, importance_type=None,\n",
-       "             interaction_constraints=None, learning_rate=0.1, max_bin=None,\n",
-       "             max_cat_threshold=None, max_cat_to_onehot=None,\n",
-       "             max_delta_step=None, max_depth=10, max_leaves=None,\n",
-       "             min_child_weight=None, missing=nan, monotone_constraints=None,\n",
-       "             n_estimators=100, n_jobs=None, num_parallel_tree=None,\n",
-       "             predictor=None, random_state=0, ...)</pre></div></div></div></div></div>"
-      ],
-      "text/plain": [
-       "XGBRegressor(base_score=None, booster=None, callbacks=None,\n",
-       "             colsample_bylevel=None, colsample_bynode=None,\n",
-       "             colsample_bytree=None, early_stopping_rounds=None,\n",
-       "             enable_categorical=False, eval_metric=None, feature_types=None,\n",
-       "             gamma=None, gpu_id=None, grow_policy=None, importance_type=None,\n",
-       "             interaction_constraints=None, learning_rate=0.1, max_bin=None,\n",
-       "             max_cat_threshold=None, max_cat_to_onehot=None,\n",
-       "             max_delta_step=None, max_depth=10, max_leaves=None,\n",
-       "             min_child_weight=None, missing=nan, monotone_constraints=None,\n",
-       "             n_estimators=100, n_jobs=None, num_parallel_tree=None,\n",
-       "             predictor=None, random_state=0, ...)"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from xgboost import XGBRegressor\n",
-    "from sklearn.datasets import make_regression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "X = torch.randn(num_samples, 4 * 74)\n",
-    "Y = torch.randn(num_samples, 1)\n",
-    "X = X.numpy()\n",
-    "Y = Y.numpy()\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=0)\n",
-    "clf = XGBRegressor(max_depth=10, learning_rate=0.1, n_estimators=100, random_state=0)\n",
-    "clf.fit(X_train, y_train)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting xgboost\n",
-      "  Downloading xgboost-1.7.6-py3-none-macosx_12_0_arm64.whl (1.6 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m14.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: numpy in /opt/homebrew/anaconda3/lib/python3.10/site-packages (from xgboost) (1.23.5)\n",
-      "Requirement already satisfied: scipy in /opt/homebrew/anaconda3/lib/python3.10/site-packages (from xgboost) (1.10.0)\n",
-      "Installing collected packages: xgboost\n",
-      "Successfully installed xgboost-1.7.6\n"
+      "Collecting lightgbm\n",
+      "  Downloading lightgbm-4.0.0.tar.gz (1.7 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m16.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Installing backend dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: numpy in /opt/homebrew/anaconda3/lib/python3.10/site-packages (from lightgbm) (1.23.5)\n",
+      "Requirement already satisfied: scipy in /opt/homebrew/anaconda3/lib/python3.10/site-packages (from lightgbm) (1.10.0)\n",
+      "Building wheels for collected packages: lightgbm\n",
+      "  Building wheel for lightgbm (pyproject.toml) ... \u001b[?25lerror\n",
+      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+      "  \n",
+      "  \u001b[31m×\u001b[0m \u001b[32mBuilding wheel for lightgbm \u001b[0m\u001b[1;32m(\u001b[0m\u001b[32mpyproject.toml\u001b[0m\u001b[1;32m)\u001b[0m did not run successfully.\n",
+      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
+      "  \u001b[31m╰─>\u001b[0m \u001b[31m[38 lines of output]\u001b[0m\n",
+      "  \u001b[31m   \u001b[0m 2023-07-23 15:49:37,465 - scikit_build_core - INFO - CMake version: 3.26.3\n",
+      "  \u001b[31m   \u001b[0m \u001b[92m***\u001b[0m \u001b[1m\u001b[92mscikit-build-core 0.4.7\u001b[0m using \u001b[94mCMake 3.26.3\u001b[0m \u001b[91m(wheel)\u001b[0m\u001b[0m\n",
+      "  \u001b[31m   \u001b[0m 2023-07-23 15:49:37,468 - scikit_build_core - INFO - Build directory: /private/var/folders/gw/rdd16gz922j8hc9s9c737lpw0000gr/T/tmphr87_kd_/build\n",
+      "  \u001b[31m   \u001b[0m \u001b[92m***\u001b[0m \u001b[1mConfiguring CMake...\u001b[0m\n",
+      "  \u001b[31m   \u001b[0m 2023-07-23 15:49:37,620 - scikit_build_core - INFO - Ninja version: 1.11.1\n",
+      "  \u001b[31m   \u001b[0m 2023-07-23 15:49:37,620 - scikit_build_core - WARNING - libdir/ldlibrary: /opt/homebrew/anaconda3/lib/libpython3.10.a is not a real file!\n",
+      "  \u001b[31m   \u001b[0m 2023-07-23 15:49:37,620 - scikit_build_core - WARNING - Can't find a Python library, got libdir=/opt/homebrew/anaconda3/lib, ldlibrary=libpython3.10.a, multiarch=darwin, masd=None\n",
+      "  \u001b[31m   \u001b[0m loading initial cache file /var/folders/gw/rdd16gz922j8hc9s9c737lpw0000gr/T/tmphr87_kd_/build/CMakeInit.txt\n",
+      "  \u001b[31m   \u001b[0m -- The C compiler identification is AppleClang 14.0.3.14030022\n",
+      "  \u001b[31m   \u001b[0m -- The CXX compiler identification is AppleClang 14.0.3.14030022\n",
+      "  \u001b[31m   \u001b[0m -- Detecting C compiler ABI info\n",
+      "  \u001b[31m   \u001b[0m -- Detecting C compiler ABI info - done\n",
+      "  \u001b[31m   \u001b[0m -- Check for working C compiler: /Library/Developer/CommandLineTools/usr/bin/cc - skipped\n",
+      "  \u001b[31m   \u001b[0m -- Detecting C compile features\n",
+      "  \u001b[31m   \u001b[0m -- Detecting C compile features - done\n",
+      "  \u001b[31m   \u001b[0m -- Detecting CXX compiler ABI info\n",
+      "  \u001b[31m   \u001b[0m -- Detecting CXX compiler ABI info - done\n",
+      "  \u001b[31m   \u001b[0m -- Check for working CXX compiler: /Library/Developer/CommandLineTools/usr/bin/c++ - skipped\n",
+      "  \u001b[31m   \u001b[0m -- Detecting CXX compile features\n",
+      "  \u001b[31m   \u001b[0m -- Detecting CXX compile features - done\n",
+      "  \u001b[31m   \u001b[0m -- Could NOT find OpenMP_C (missing: OpenMP_C_FLAGS OpenMP_C_LIB_NAMES)\n",
+      "  \u001b[31m   \u001b[0m -- Could NOT find OpenMP_CXX (missing: OpenMP_CXX_FLAGS OpenMP_CXX_LIB_NAMES)\n",
+      "  \u001b[31m   \u001b[0m -- Could NOT find OpenMP (missing: OpenMP_C_FOUND OpenMP_CXX_FOUND)\n",
+      "  \u001b[31m   \u001b[0m -- Found OpenMP_C: -Xpreprocessor -fopenmp -I/opt/homebrew/opt/libomp/include\n",
+      "  \u001b[31m   \u001b[0m -- Found OpenMP_CXX: -Xpreprocessor -fopenmp -I/opt/homebrew/opt/libomp/include\n",
+      "  \u001b[31m   \u001b[0m -- Found OpenMP: TRUE\n",
+      "  \u001b[31m   \u001b[0m -- Performing Test MM_PREFETCH\n",
+      "  \u001b[31m   \u001b[0m -- Performing Test MM_PREFETCH - Failed\n",
+      "  \u001b[31m   \u001b[0m -- Performing Test MM_MALLOC\n",
+      "  \u001b[31m   \u001b[0m -- Performing Test MM_MALLOC - Success\n",
+      "  \u001b[31m   \u001b[0m -- Using _mm_malloc\n",
+      "  \u001b[31m   \u001b[0m -- Configuring done (1.2s)\n",
+      "  \u001b[31m   \u001b[0m -- Generating done (0.0s)\n",
+      "  \u001b[31m   \u001b[0m -- Build files have been written to: /var/folders/gw/rdd16gz922j8hc9s9c737lpw0000gr/T/tmphr87_kd_/build\n",
+      "  \u001b[31m   \u001b[0m \u001b[92m***\u001b[0m \u001b[1mBuilding project with \u001b[94mNinja\u001b[0m...\u001b[0m\n",
+      "  \u001b[31m   \u001b[0m ninja: error: '/opt/homebrew/opt/libomp/lib/libomp.dylib', needed by '/private/var/folders/gw/rdd16gz922j8hc9s9c737lpw0000gr/T/pip-install-150aflz2/lightgbm_a2c62bfcc0ac4f5aa8760babcf02ed3b/lib_lightgbm.so', missing and no known rule to make it\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m \u001b[91m\u001b[1m*** CMake build failed\u001b[0m\n",
+      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
+      "  \n",
+      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "\u001b[?25h\u001b[31m  ERROR: Failed building wheel for lightgbm\u001b[0m\u001b[31m\n",
+      "\u001b[0mFailed to build lightgbm\n",
+      "\u001b[31mERROR: Could not build wheels for lightgbm, which is required to install pyproject.toml-based projects\u001b[0m\u001b[31m\n",
+      "\u001b[0m"
      ]
     }
    ],
    "source": [
-    "!pip install xgboost"
+    "!pip install lightgbm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git clone --recursive https://github.com/microsoft/LightGBM\n",
+    "cd LightGBM\n",
+    "mkdir build\n",
+    "cd build\n",
+    "cmake ..\n",
+    "make -j4"
    ]
   }
  ],
